--- a/index.html
+++ b/index.html
@@ -8,6 +8,35 @@
   <title>Dropbox</title>
 </head>
 <body>
+
+  <!-- HEADER AND NAV -->
+  <header class="clearfix">
+    <div class="left-header">
+      <img src="img/logo-small.png" alt="">
+      <nav class="nav left-nav">
+        <ul>
+          <li><a href="#">Perchè Dropbox?</a></li>
+          <li><a href="#">Funzioni</a></li>
+          <li><a href="#">Piani e prezzi</a></li>
+        </ul>
+      </nav>
+    </div>
+
+    <div class="right-header">
+      <nav class="nav right-nav">
+        <ul>
+          <li><a href="#">Supporto</a></li>
+          <li><a href="#">Contatta l'ufficio vendite</a></li>
+          <li><a href="#">Accedi</a></li>
+        </ul>
+      </nav>
+      <div id="inizia">
+        <a class="btn blue-btn" href="#">Inizia</a>
+      </div> 
+    </div>
+  </header>
+  <!-- /HEADER AND NAV -->
+
   
 </body>
 </html>
