--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css"
+      integrity="sha512-PgQMlq+nqFLV4ylk1gwUOgm6CtIIXkKwaIHp/PAIWHzig/lKZSEGKEysh0TCVbHJXCLN7WetD8TFecIky75ZfQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
   <title>Dropbox</title>
 </head>
@@ -37,6 +47,33 @@
   </header>
   <!-- /HEADER AND NAV -->
 
+  <!-- JUMBOTRON -->
+  <section class="full-view">
+    <div class="jumbotron">
+      <div class="top-jumbotron">
+        <h2>Tutto ciò che ti serve per il lavoro, in un unico posto</h2>
+      </div>
+
+      <div class="bottom-jumbotron clearfix">
+        <div class="left-jumbo-bottom">
+          <p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente</p>
+          <div class="btn-jumbotron">
+            <a class="btn blue-btn" href="#">Inizia la tua prova gratuita</a>
+          </div>
+          <div class="text-subscribe">
+            <p>Annulla in qualsiasi momento</p>
+          </div>
+          <a class="ancora" href="#">
+            <i class="fas fa-arrow-down"></i>
+          </a>
+        </div>
+
+        <div class="right-jumbo-bottom">
+          <img src="img/jumbo.png" alt="">
+        </div>
+      </div>  
+    </div>
+  </section>
   
 </body>
 </html>
