--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
   <!-- HEADER AND NAV -->
   <header class="clearfix">
     <div class="left-header">
-      <img src="img/logo-small.png" alt="">
+      <a id="logo" href="">
+       <img src="img/logo-small.png" alt="">
+      </a>
+      </div>
       <nav class="nav left-nav">
         <ul>
           <li><a href="#">Perchè Dropbox?</a></li>
@@ -69,11 +72,127 @@
         </div>
 
         <div class="right-jumbo-bottom">
-          <img src="img/jumbo.png" alt="">
+          <div>
+            <img src="img/jumbo.png" alt="">
+          </div>
         </div>
       </div>  
     </div>
   </section>
+  <!-- /JUMBOTRON -->
   
+  <!-- MAIN -->
+  <main>
+    <div class="check-business container">
+      <h2>Trova il piano Dropbox Business che fa per te</h2>
+      <input type="radio"> 
+      <span>Fatturazione mensile</span>
+      <input type="radio"> 
+      <span>Fatturazione annuale</span>
+    </div>
+
+
+    <div class="block-business container clearfix">
+      <div class="block">
+        <div class="top-block">
+          <h3>Singolo</h3>
+        </div>
+        <div class="middle-block">
+          <h2>Professional</h2>
+          <div class="price-business">
+            <span>19,99 </span>
+          </div>
+          <div class="date-business">
+            <span>/mese</span>
+          </div>
+          <div class="utent-business">
+            <span>1 utente</span>
+          </div>
+          <div class="storage-business">
+            <span>3 TB di spazio di archiviazione sicuro</span>
+          </div>
+          <div class="function-business">
+            <span>Funzioni di produttività premium e condivisione file semplice e sicura</span>
+          </div>
+          <div class="try-business">
+            <a class="btn blue-btn" href="#">Prova gratis per 30 giorni</a>
+          </div> 
+          <div class="shopnow-business">
+            <span>oppure <a href="#">acquista ora</a></span>
+          </div>
+        </div>
+        <div class="bottom-block">
+
+        </div>
+      </div>
+
+      <div class="block middle-box">
+        <div class="top-block">
+          <h3>Singolo</h3>
+        </div>
+        <div class="middle-block">
+          <h2>Professional</h2>
+          <div class="price-business">
+            <span>19,99 </span>
+          </div>
+          <div class="date-business">
+            <span>/mese</span>
+          </div>
+          <div class="utent-business">
+            <span>1 utente</span>
+          </div>
+          <div class="storage-business">
+            <span>3 TB di spazio di archiviazione sicuro</span>
+          </div>
+          <div class="function-business">
+            <span>Funzioni di produttività premium e condivisione file semplice e sicura</span>
+          </div>
+          <div class="try-business">
+            <a class="btn blue-btn" href="#">Prova gratis per 30 giorni</a>
+          </div>
+          <div class="shopnow-business">
+            <span>oppure <a href="#">acquista ora</a></span>
+          </div>
+        </div>
+        <div class="bottom-block">
+
+        </div>
+      </div>
+
+      <div class="block">
+        <div class="top-block">
+          <h3>Singolo</h3>
+        </div>
+        <div class="middle-block">
+          <h2>Professional</h2>
+          <div class="price-business">
+            <span>19,99 </span>
+          </div>
+          <div class="date-business">
+            <span>/mese</span>
+          </div>
+          <div class="utent-business">
+            <span>1 utente</span>
+          </div>
+
+          <div class="storage-business">
+            <span>3 TB di spazio di archiviazione sicuro</span>
+          </div>
+          <div class="function-business">
+            <span>Funzioni di produttività premium e condivisione file semplice e sicura</span>
+          </div>
+          <div class="try-business">
+            <a class="btn blue-btn" href="#">Prova gratis per 30 giorni</a>
+          </div> 
+          <div class="shopnow-business">
+            <span>oppure <a href="#">acquista ora</a></span>
+          </div>
+        </div>
+        <div class="bottom-block">
+
+        </div>
+      </div>
+    </div>
+  </main>
 </body>
 </html>
