fix business block and start team block

--- a/index.html
+++ b/index.html
@@ -91,11 +91,12 @@
       <span>Fatturazione annuale</span>
     </div>
 
-
+    <!-- BUSINESS BLOCK -->
     <div class="block-business container clearfix">
       <div class="block">
         <div class="top-block">
-          <h3>Singolo</h3>
+          <h3>
+            <span><i class="far fa-user"></i></span> Singolo</h3>
         </div>
         <div class="middle-block">
           <h2>Professional</h2>
@@ -106,29 +107,41 @@
             <span>/mese</span>
           </div>
           <div class="utent-business">
-            <span>1 utente</span>
+            <span><i class="far fa-user"></i></span>
+            <span> 1 utente</span>
           </div>
           <div class="storage-business">
+            <span><i class="far fa-folder"></i></span>
             <span>3 TB di spazio di archiviazione sicuro</span>
           </div>
           <div class="function-business">
+            <span><i class="fas fa-pencil-alt"></i></span>
             <span>Funzioni di produttività premium e condivisione file semplice e sicura</span>
           </div>
           <div class="try-business">
             <a class="btn blue-btn" href="#">Prova gratis per 30 giorni</a>
           </div> 
           <div class="shopnow-business">
-            <span>oppure <a href="#">acquista ora</a></span>
+            <span>oppure </span><a href="#">acquista ora</a>
           </div>
         </div>
         <div class="bottom-block">
-
+          <h4>Punti salienti del piano</h4>
+          <ul>
+            <li>Invia file fino a 100 GB con Dropbox Transfert</li>
+            <li>Cartelle offline su dispositivi mobili</li>
+            <li>Pulizia remota dell'account</li>
+            <li>Filigrana documento</li>
+            <li>Assistenza prioritaria via email e chat</li>
+          </ul>
         </div>
       </div>
 
       <div class="block middle-box">
         <div class="top-block">
-          <h3>Singolo</h3>
+          <h3>
+            <span><i class="far fa-building"></i></span> Singolo
+          </h3>
         </div>
         <div class="middle-block">
           <h2>Professional</h2>
@@ -155,13 +168,21 @@
           </div>
         </div>
         <div class="bottom-block">
-
+          <h4>Punti salienti del piano</h4>
+          <ul>
+            <li>Invia file fino a 100 GB con Dropbox Transfert</li>
+            <li>Cartelle offline su dispositivi mobili</li>
+            <li>Pulizia remota dell'account</li>
+            <li>Filigrana documento</li>
+            <li>Assistenza prioritaria via email e chat</li>
+          </ul>
         </div>
       </div>
 
       <div class="block">
         <div class="top-block">
-          <h3>Singolo</h3>
+          <h3>
+            <span><i class="far fa-building"></i></span> Singolo</h3>
         </div>
         <div class="middle-block">
           <h2>Professional</h2>
@@ -189,10 +210,29 @@
           </div>
         </div>
         <div class="bottom-block">
-
+          <h4>Punti salienti del piano</h4>
+          <ul>
+            <li>Invia file fino a 100 GB con Dropbox Transfert</li>
+            <li>Cartelle offline su dispositivi mobili</li>
+            <li>Pulizia remota dell'account</li>
+            <li>Filigrana documento</li>
+            <li>Assistenza prioritaria via email e chat</li>
+          </ul>
         </div>
       </div>
     </div>
+    <!-- /BUSINESS BLOCK -->
+
+    <div class="block-team container">
+      <div class="top-block">
+        <h3>
+          <span><i class="far fa-building"></i></span>
+          Team
+        </h3>
+      </div>
+      <div class="bottom-block-team"></div>
+    </div>
+
   </main>
 </body>
 </html>
