--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <span>Funzioni di produttività premium e condivisione file semplice e sicura</span>
           </div>
           <div class="try-business">
-            <a class="btn blue-btn" href="#">Prova gratis per 30 giorni</a>
+            <a class="btn blue-btn big-btn" href="#">Prova gratis per 30 giorni</a>
           </div> 
           <div class="shopnow-business">
             <span>oppure </span><a href="#">acquista ora</a>
@@ -152,16 +152,19 @@
             <span>/mese</span>
           </div>
           <div class="utent-business">
+            <span><i class="far fa-user"></i></span>
             <span>1 utente</span>
           </div>
           <div class="storage-business">
+            <span><i class="far fa-folder"></i></span>
             <span>3 TB di spazio di archiviazione sicuro</span>
           </div>
           <div class="function-business">
+            <span><i class="fas fa-pencil-alt"></i></span>
             <span>Funzioni di produttività premium e condivisione file semplice e sicura</span>
           </div>
           <div class="try-business">
-            <a class="btn blue-btn" href="#">Prova gratis per 30 giorni</a>
+            <a class="btn blue-btn big-btn" href="#">Prova gratis per 30 giorni</a>
           </div>
           <div class="shopnow-business">
             <span>oppure <a href="#">acquista ora</a></span>
@@ -193,17 +196,20 @@
             <span>/mese</span>
           </div>
           <div class="utent-business">
+            <span><i class="far fa-user"></i></span>
             <span>1 utente</span>
           </div>
 
           <div class="storage-business">
+            <span><i class="far fa-folder"></i></span>
             <span>3 TB di spazio di archiviazione sicuro</span>
           </div>
           <div class="function-business">
+            <span><i class="fas fa-pencil-alt"></i></span>
             <span>Funzioni di produttività premium e condivisione file semplice e sicura</span>
           </div>
           <div class="try-business">
-            <a class="btn blue-btn" href="#">Prova gratis per 30 giorni</a>
+            <a class="btn blue-btn big-btn" href="#">Prova gratis per 30 giorni</a>
           </div> 
           <div class="shopnow-business">
             <span>oppure <a href="#">acquista ora</a></span>
@@ -230,7 +236,18 @@
           Team
         </h3>
       </div>
-      <div class="bottom-block-team"></div>
+      <div class="bottom-block-team clearfix">
+        <div class="left-b-team">
+          <h3>Enterprise</h3>
+          <h4>Contatta l'ufficio vendite per i prezzi</h4>
+          <p>Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su questa scala.</p>
+        </div>
+        <div class="right-b-team">
+          <div class="">
+            <a class="btn blue-btn big-btn" href="#">Prova gratis per 30 giorni</a>
+          </div>
+        </div>
+      </div>
     </div>
 
   </main>
