--- a/index.html
+++ b/index.html
@@ -229,6 +229,7 @@
     </div>
     <!-- /BUSINESS BLOCK -->
 
+    <!-- TEAM BLOCK -->
     <div class="block-team container">
       <div class="top-block">
         <h3>
@@ -249,6 +250,32 @@
         </div>
       </div>
     </div>
+    <!-- / TEAM BLOCK -->
+
+    <!-- SEARCH PARTNER -->
+    <div class="partner-dropbox container clearfix">
+      <div class="img-partner">
+        <img src="img/partner.png" alt="partner">
+      </div>
+      <div class="text-partner">
+        <h2>Entra in contatto con un partner Dropbox</h2>
+        <p>Trova un partner Dropbox e HelloSign di fiducia. Ottieni le soluzioni e i servizi necessari per raggiungere i tuoi obbiettivi aziendali, tra cui implementazione, integrazione, gestione e supporto continui.</p>
+        <div class="">
+          <a class="btn white-btn" href="#">Trova un partner</a>
+        </div>
+      </div>     
+    </div>
+    <!-- /SEARCH PARTNER -->
+
+    <!-- OPERATION BUSINESS -->
+    <div class="operation-business container">
+      <h2>Esegui più operazioni con Dropbox Business</h2>
+      
+
+    </div>
+
+
+
 
   </main>
 </body>
