--- a/index.html
+++ b/index.html
@@ -270,7 +270,64 @@
     <!-- OPERATION BUSINESS -->
     <div class="operation-business container">
       <h2>Esegui più operazioni con Dropbox Business</h2>
-      
+      <div class="operation-block clearfix">
+        <div class="operation-card">
+          <div class="operation-img">
+            <img src="img/business-feature-switching-tools.png" alt="">
+          </div>
+          <div class="operation-text">
+            <h3>Passa di meno da uno strumento all'altro</h3>
+            <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e <span>Dropbox Paper</span> direttamente da Dropbox.</p>
+          </div>
+        </div>
+        <div class="operation-card center">
+          <div class="operation-img">
+            <img src="img/business-feature-coordinate-it.png" alt="">
+          </div>
+          <div class="operation-text">
+            <h3>Passa di meno da uno strumento all'altro</h3>
+            <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+          </div>
+        </div>
+        <div class="operation-card">
+          <div class="operation-img">
+            <img src="img/business-feature-multi-device.png" alt="">
+          </div>
+          <div class="operation-text">
+            <h3>Passa di meno da uno strumento all'altro</h3>
+            <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+          </div>
+        </div>
+
+        <div class="operation-block clearfix">
+          <div class="operation-card">
+            <div class="operation-img">
+              <img src="img/business-feature-integrations-it.png" alt="">
+            </div>
+            <div class="operation-text">
+              <h3>Passa di meno da uno strumento all'altro</h3>
+              <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e <span>Dropbox Paper</span> direttamente da Dropbox.</p>
+            </div>
+          </div>
+          <div class="operation-card center">
+            <div class="operation-img">
+              <img src="img/business-feature-send-files-it.png" alt="">
+            </div>
+            <div class="operation-text">
+              <h3>Passa di meno da uno strumento all'altro</h3>
+              <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+            </div>
+          </div>
+          <div class="operation-card">
+            <div class="operation-img">
+              <img src="img/business-feature-security.png" alt="">
+            </div>
+            <div class="operation-text">
+              <h3>Passa di meno da uno strumento all'altro</h3>
+              <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+            </div>
+          </div>
+      </div>
 
     </div>
 
