team-partner block

--- a/index.html
+++ b/index.html
@@ -328,8 +328,20 @@
             </div>
           </div>
       </div>
-
     </div>
+    <!-- /OPERATION BUSINESS -->
+
+    <!-- TEAM PARTNER -->
+    <div class="">
+      <div class="team-text">
+        <h2>Più di 500.00 team utilizzano Dropbox Business</h2>
+        <a href="">Scopri di più sui nostri clienti</a>
+      </div>
+      
+    </div>
+    <!-- /TEAM PARTNER -->
+
+    
 
 
 
