start partnet dropbox

--- a/index.html
+++ b/index.html
@@ -331,21 +331,36 @@
     </div>
     <!-- /OPERATION BUSINESS -->
 
-    <!-- TEAM PARTNER -->
-    <div class="">
-      <div class="team-text">
-        <h2>Più di 500.00 team utilizzano Dropbox Business</h2>
-        <a href="">Scopri di più sui nostri clienti</a>
-      </div>
-      
-    </div>
-    <!-- /TEAM PARTNER -->
-
-    
-
-
-
-
   </main>
+    <!-- TEAM PARTNER -->
+  <div class="container">
+    <div class="team-text">
+      <h2>Più di 500.00 team utilizzano Dropbox Business</h2>
+      <a href="">Scopri di più sui nostri clienti</a>
+    </div> 
+  </div>
+  <!-- /TEAM PARTNER -->
+
+  <!-- PARTNER BLOCK -->
+  <section class="aziende-dropbox clearfix">
+    <div class="aziende-dropbox-left">
+      <div class="dimension-partner clearfix">
+        <div class="aziende-dropbox-block green"></div>
+        <div class="aziende-dropbox-block purples"></div>
+        <div class="aziende-dropbox-block light-blue"></div>
+        <div class="aziende-dropbox-block purple"></div>
+      </div>    
+    </div>
+    <div class="aziende-dropbox-right">
+      <div class="dimension-partner clearfix">
+        <div class="aziende-dropbox-block dark-red"></div>
+        <div class="aziende-dropbox-block light"></div>
+        <div class="aziende-dropbox-block blue"></div>
+        <div class="aziende-dropbox-block yellow"></div>
+      </div> 
+    </div>
+  </section>
+  <!-- /PARTNER BLOCK -->
+
 </body>
 </html>
