--- a/index.html
+++ b/index.html
@@ -392,8 +392,99 @@
       </div>
     </div> 
   </section>
+  <!-- /TRY WITH DROPBOX BUSINESS -->
 
-  <section></section>
+  <section class="faq container clearfix">
+    <h2>Domande frequenti</h2>
+    <div class="block-faq">
+      <div class="raw-faq clearfix">
+        <h3>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h3>
+        <span class="arrow-faq">
+          <i class="fas fa-chevron-down"></i>
+        </span>
+      </div>
+      <div class="raw-faq clearfix">
+        <h3>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h3>
+        <span class="arrow-faq">
+          <i class="fas fa-chevron-down"></i>
+        </span>
+      </div>
+      <div class="raw-faq clearfix">
+        <h3>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h3>
+        <span class="arrow-faq">
+          <i class="fas fa-chevron-down"></i>
+        </span>
+      </div>
+      <div class="raw-faq clearfix">
+        <h3>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h3>
+        <span class="arrow-faq">
+          <i class="fas fa-chevron-down"></i>
+        </span>
+      </div>
+    </div>
+  </section>
+
+  <!-- FOOTER -->
+  <footer>
+    <div class="list-footer clearfix">
+      <div class="block-footer">
+        <h4>Dropbox</h4>
+        <ul>
+          <li><a href="#">Applicazione desktop</a></li>
+          <li><a href="#">Perchè Dropbox</a></li>
+          <li><a href="#">Piani</a></li>
+          <li><a href="#">Sicurezza</a></li>
+          <li><a href="#">Funzioni</a></li>
+        </ul>
+      </div>
+
+      <div class="block-footer">
+        <h4>Prodotti</h4>
+        <ul>
+          <li><a href="#">Applicazione desktop</a></li>
+          <li><a href="#">Perchè Dropbox</a></li>
+          <li><a href="#">Piani</a></li>
+          <li><a href="#">Sicurezza</a></li>
+          <li><a href="#">Funzioni</a></li>
+        </ul>
+      </div>
+
+      <div class="block-footer">
+        <h4>Azienda</h4>
+        <ul>
+          <li><a href="#">Applicazione desktop</a></li>
+          <li><a href="#">Perchè Dropbox</a></li>
+          <li><a href="#">Piani</a></li>
+          <li><a href="#">Sicurezza</a></li>
+          <li><a href="#">Funzioni</a></li>
+        </ul>
+      </div>
+
+      <div class="block-footer">
+        <h4>Supporto</h4>
+        <ul>
+          <li><a href="#">Applicazione desktop</a></li>
+          <li><a href="#">Perchè Dropbox</a></li>
+          <li><a href="#">Piani</a></li>
+          <li><a href="#">Sicurezza</a></li>
+          <li><a href="#">Funzioni</a></li>
+        </ul>
+      </div>
+
+      <div class="block-footer">
+        <h4>Community</h4>
+        <ul>
+          <li><a href="#">Applicazione desktop</a></li>
+          <li><a href="#">Perchè Dropbox</a></li>
+          <li><a href="#">Piani</a></li>
+          <li><a href="#">Sicurezza</a></li>
+          <li><a href="#">Funzioni</a></li>
+        </ul>
+      </div>
+    </div>
+  </footer>
+  <!-- /FOOTER -->
+
 
 </body>
 </html>
