--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
   <link rel="stylesheet" href="css/style.css">
   <title>Dropbox</title>
 </head>
@@ -28,20 +29,20 @@
       </div>
       <nav class="nav left-nav">
         <ul>
-          <li class="line-nav"><a href="#">Perchè Dropbox?</a>
+          <li ><a class="line-nav" href="#">Perchè Dropbox?</a>
             <ul class="drop-down-nav">
               <li><a href="">Scopri</a></li>
               <li><a href="">Convenienza</a></li>
               <li><a href="">Partner</a></li>
             </ul>
           </li>
-          <li class="line-nav"><a href="#">Funzioni</a>
+          <li><a class="line-nav" href="#">Funzioni</a>
             <ul class="drop-down-nav">
               <li><a href="">Centro assistenza</a></li>
               <li><a href="">Forum della Community</a></li>
             </ul>
           </li>
-          <li class="line-nav"><a href="#">Piani e prezzi</a>
+          <li><a class="line-nav" href="#">Piani e prezzi</a>
             <ul class="drop-down-nav">
               <li><a href="">Abbonamenti</a></li>
               <li><a href="">Servizi</a></li>
@@ -55,19 +56,19 @@
     <div class="right-header float-r">
       <nav class="nav right-nav">
         <ul>
-          <li class="line-nav"><a href="#">Supporto</a>
+          <li><a class="line-nav" href="#">Supporto</a>
             <ul class="drop-down-nav">
               <li><a href="">Centro assistenza</a></li>
               <li><a href="">Forum della Community</a></li>
             </ul>
           </li>
-          <li class="line-nav"><a href="#">Contatta l'ufficio vendite</a>
+          <li><a class="line-nav" href="#">Contatta l'ufficio vendite</a>
             <ul class="drop-down-nav">
               <li><a href="">Numero verde</a></li>
               <li><a href="">Contattaci</a></li>
             </ul>
           </li>
-          <li class="line-nav"><a href="#">Accedi</a>
+          <li><a class="line-nav" href="#">Accedi</a>
             <ul class="drop-down-nav">
               <li><a href="">Login</a></li>
               <li><a href="">Registrati</a></li>
@@ -138,18 +139,11 @@
           <div class="date-business">
             <span>/mese</span>
           </div>
-          <div class="utent-business">
-            <span><i class="far fa-user"></i></span>
-            <span> 1 utente</span>
-          </div>
-          <div class="storage-business">
-            <span><i class="far fa-folder"></i></span>
-            <span>3 TB di spazio di archiviazione sicuro</span>
-          </div>
-          <div class="function-business">
-            <span><i class="fas fa-pencil-alt"></i></span>
-            <span>Funzioni di produttività premium e condivisione file semplice e sicura</span>
-          </div>
+          <ul class="clearfix">
+            <li class="utent-syb">1 utente</li>
+            <li class="storage-syb">3 TB di spazio di archiviazione sicuro</li>
+            <li class="pen-syb">Funzioni di produttività premium e condivisione file semplice e sicura</li>
+          </ul>
           <div class="try-business">
             <a class="btn blue-btn big-btn" href="#">Prova gratis per 30 giorni</a>
           </div> 
@@ -183,18 +177,11 @@
           <div class="date-business">
             <span>/mese</span>
           </div>
-          <div class="utent-business">
-            <span><i class="far fa-user"></i></span>
-            <span>1 utente</span>
-          </div>
-          <div class="storage-business">
-            <span><i class="far fa-folder"></i></span>
-            <span>3 TB di spazio di archiviazione sicuro</span>
-          </div>
-          <div class="function-business">
-            <span><i class="fas fa-pencil-alt"></i></span>
-            <span>Funzioni di produttività premium e condivisione file semplice e sicura</span>
-          </div>
+          <ul class="clearfix">
+            <li class="utent-syb">1 utente</li>
+            <li class="storage-syb">3 TB di spazio di archiviazione sicuro</li>
+            <li class="smile-syb">Funzioni di produttività premium e condivisione file semplice e sicura</li>
+          </ul>
           <div class="try-business">
             <a class="btn blue-btn big-btn" href="#">Prova gratis per 30 giorni</a>
           </div>
@@ -227,19 +214,11 @@
           <div class="date-business">
             <span>/mese</span>
           </div>
-          <div class="utent-business">
-            <span><i class="far fa-user"></i></span>
-            <span>1 utente</span>
-          </div>
-
-          <div class="storage-business">
-            <span><i class="far fa-folder"></i></span>
-            <span>3 TB di spazio di archiviazione sicuro</span>
-          </div>
-          <div class="function-business">
-            <span><i class="fas fa-pencil-alt"></i></span>
-            <span>Funzioni di produttività premium e condivisione file semplice e sicura</span>
-          </div>
+          <ul class="clearfix">
+            <li class="utent-syb">1 utente</li>
+            <li class="storage-syb">3 TB di spazio di archiviazione sicuro</li>
+            <li class="pen-syb">Funzioni di produttività premium e condivisione file semplice e sicura</li>
+          </ul>
           <div class="try-business">
             <a class="btn blue-btn big-btn" href="#">Prova gratis per 30 giorni</a>
           </div> 
@@ -539,6 +518,12 @@
           <li><a href="#">Funzioni</a></li>
         </ul>
       </div>
+    </div>
+    <div class="under-line-block"></div>
+    <div class="page-language">
+      <i class="fas fa-globe-americas"></i>
+      <span>Italiano</span>
+      <i class="fas fa-sort-up"></i>
     </div>
   </footer>
   <!-- /FOOTER -->
