--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
   <main>
     <div id="ancor" class="check-business container">
       <h2>Trova il piano Dropbox Business che fa per te</h2>
-      <input type="radio"> 
+      <input type="radio" name="input-1"> 
       <span>Fatturazione mensile</span>
-      <input type="radio"> 
+      <input type="radio" name="input-1"> 
       <span>Fatturazione annuale</span>
     </div>
 
@@ -134,7 +134,7 @@
         <div class="middle-block">
           <h2>Professional</h2>
           <div class="price-business">
-            <span>19,99 </span>
+            <span>19,99 &euro;</span>
           </div>
           <div class="date-business">
             <span>/mese</span>
@@ -172,10 +172,10 @@
         <div class="middle-block">
           <h2>Professional</h2>
           <div class="price-business">
-            <span>19,99 </span>
+            <span>19,99 &euro;</span>
           </div>
           <div class="date-business">
-            <span>/mese</span>
+            <span>/ utente / mese, a partire da 3 utenti</span>
           </div>
           <ul class="clearfix">
             <li class="utent-syb">1 utente</li>
@@ -209,7 +209,7 @@
         <div class="middle-block">
           <h2>Professional</h2>
           <div class="price-business">
-            <span>19,99 </span>
+            <span>19,99 &euro;</span>
           </div>
           <div class="date-business">
             <span>/mese</span>
